# my_passwords

./: README.md  app.py  app_readme.md  main.py  requirements.txt  setup.cfg
my_passwords/: __init__.py  manager.py  test_manager.py
