[metadata]
name = my_passwords
version = 0.3
author = ToorajJahangiri
author_email = Toorajjahangiri@gmail.com
license = MIT
url = https://github.com/Class-Tooraj/my_passwords
description = Simple Password Manager And Some Other Functionality.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >= 3.7.*

[options.packages.find]
exclude =
    test*
    testing*